Fix web site issues

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -5,7 +5,7 @@
         <title>Lucy_Light: Kommandos</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/css/main.min.css" />
+        <link rel="stylesheet" href="assets/c/main.min.css" />
     </head>
     <body>
         <div class="container">
@@ -138,7 +138,7 @@
                     <h3>Vorschläge? Ideen? Feedback? Irgendwie sowas?</h3>
                     <p>
                         Wenn du Ideen oder Verbesserungsvorschläge für Lucy (oder auch diese Anleitung) hast - immer her damit!<br />
-                        Du kannst uns im IRC erreichen (Ansprechpartner für Lucy ist PR-Pierre) oder via <a href="skype:bigbuhmann?chat">Skype</a> und <a href="mailto:drweissbrot@outlook.com">eMail</a>. Des Weiteren kannst du <a href="vorschlag.html">hier</a> oder auf <a href="//github.com/drweissbrot/lucy/issues">GitHub</a> Kommandos vorschlagen.
+                        Du kannst uns im IRC erreichen (Ansprechpartner für Lucy ist PR-Pierre) oder via <a href="skype:bigbuhmann?chat">Skype</a> und <a href="mailto:drweissbrot@outlook.com">eMail</a>. Des Weiteren kannst du <a href="vorschlag.html">hier</a> oder auf <a href="//github.com/drweissbrot/lcy/issues">GitHub</a> Kommandos vorschlagen.
                     </p>
                 </div>
             </div>
@@ -149,8 +149,12 @@
                         <p>So eine Arbeit wird eigentlich nie fertig, man muss sie für fertig erklären, wenn man nach Zeit und Umständen das Mögliche getan hat.</p>
                         <footer>J. W. von Goethe in <cite title="Source Title">Source Title</cite></footer>
                     </blockquote>
-                    <p>War nicht verständlich, oder?</p>
-                    <p><a href="//github.com/drweissbrot">Dr. Weißbrot</a> (aka PR-Pierre) für das <a href="http://bronyradiogermany.com">Brony Radio Germany</a>
+                    <div class="left">
+                        <p>War nicht verständlich, oder?</p>
+                    </div>
+                    <div class="right">
+                        <p><a href="//github.com/drweissbrot">Dr. Weißbrot</a> (aka PR-Pierre) für das <a href="http://bronyradiogermany.com">Brony Radio Germany</a>
+                    </div>
                 </footer>
             </div>
         </div>
